--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "swiper": "^11.2.10",
     "tailwind": "^2.3.1",
     "yup": "^1.7.0"
   },
